--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,10 +9,11 @@
     
     <body>
         <div class="main-content">
-         Title from html file
+         
        {{>header}}
+       <p>This site is created by Malika Gulati. It uses data from mapbox.com and weather stack.com </p>
        
-        <img class="potrait" src="/img/google2.0.0.jpg">
+        <img class="potrait" src="/img/malika-pic.jpg">
         </div>
         
         {{>footer}}
