--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -13,6 +13,7 @@
         <div class="main-content">
             {{>header}}
            <p>{{msg}}</p>
+           <p><b>{{email}}</b></p>
 
         </div>
 
