--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,7 +10,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <p> use this site to check Weather.</p>
+            <p><b> use this site to check Weather.</b></p>
             <form>
                 <input placeholder="location">
                 <button>Search</button>
